--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@sentry/react": "^7.7.0",
     "@sentry/tracing": "^7.7.0",
     "@testing-library/jest-dom": "^5.16.4",
